<resources>
    <string name="app_name">Первое приложение</string>
    <string name="enter_name">Введите имя</string>
    <string name="first_activity">Первое окно</string>
    <string name="second_activity">Второе окно</string>
    <string name="button_main">Главная кнопка</string>
    <string name="hello_world">Привет, мир!</string>
    <string name="no_data">Нет данных</string>
    <string name="hello_name_format">Привет %s</string>
    <string name="button_main_second">Вторая кнопка</string>
    <string name="button_pressed">Кнопка нажата!</string>
    <string name="call_toast">Вызов Toast</string>
    <string name="text_for_et">Текст из EditText</string>
    <string name="first_image_view">Первое изображение</string>
    <string name="lesson18">Урок 18 (Стили, темы)</string>
    <string name="lesson19">Урок 19 (Фрагменты)</string>
    <string name="next_activity">Следующее активити</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_a">Фрагмент А</string>
    <string name="fragment_b">Фрагмент Б</string>
    <string name="next_fragment">Следующий фрагмент</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="back_fragment">Назад к фрагменту</string>
    <string name="transfer_to_fragment">Передать данные во фрагмент</string>
    <string name="lesson20">Урок 20 (View Binding)</string>
    <string name="lesson21">Урок 21 (RecyclerView)</string>
    <string name="lesson22">Урок 22 (DiffUtil)</string>
    <string name="change_text">Поменять текст</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dymamic_fragment" translatable="false">Dynamic fragment</string>
    <string name="home_fragment" translatable="false">Home Fragment</string>
    <string name="details_fragment" translatable="false">Details Fragment</string>
    <string name="settings_fragment" translatable="false">Settings Fragment</string>
    <string name="add_fragment">Добавить фрагмент</string>
    <string name="remove_fragment">Удалить фрагмент</string>
    <string name="add">Добавить</string>
    <string name="clear_List">Очистить список</string>
    <string name="delete">Удалить</string>
    <string name="number">Кол-во</string>
    <string name="product_name">Наименование продукта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="download_data">Загрузить данные</string>
    <string name="download_success">Данные загружены</string>
    <string name="download_errror">Ошибка загрузки</string>
    <string name="data_loading">Данные загружаются...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="in_cart">В корзине: 0</string>
    <string name="load_data">Загрузить данные</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_lesson40">Lesson40</string>
    <string name="title_activity_lesson41">Lesson41</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>